@@ -1,3 +1,12 @@
+## WIP
+
+### Bug Fixes
+
+* Handle GPX track logs with local (non-ISO9601) timestamps.  The timestamp
+format is assumed to be "yyyy-MM-dd'T'HH:mm:ss".
+
+* Fix possible off-by-one when searching for a track point by timestamp
+
 ## GeoTag 4.5.1
 
 ### Bug Fixes
